# audio_training

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml  requirements.txt
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
.planning/phases/01-pod-bootstrap/: 01-01-doctor-training-checks-PLAN.md  01-01-doctor-training-checks-SUMMARY.md  01-02-setup-pod-script-PLAN.md  01-02-setup-pod-script-SUMMARY.md  01-CONTEXT.md  01-DISCUSSION-LOG.md  01-RESEARCH.md  01-REVIEW-FIX.md  01-REVIEW.md  01-UAT.md
.planning/phases/02-training-cli/: 02-01-SUMMARY.md  02-01-rvc-arg-builders-PLAN.md  02-02-SUMMARY.md  02-02-doctor-and-cli-PLAN.md  02-03-SUMMARY.md  02-03-stage-runner-PLAN.md  02-CONTEXT.md  02-DISCUSSION-LOG.md  02-HUMAN-UAT.md  02-RESEARCH.md  02-REVIEW.md  02-VERIFICATION.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
scripts/: check.sh  install_model.sh  launch_rvc_webui.sh  setup_pod.sh  setup_rvc.sh
src/: doctor.py  ffmpeg_utils.py  generate.py  preprocess.py  slicer2.py  train.py
tests/: conftest.py
tests/integration/: test_edge_tts.py  test_preprocess_real.py
tests/unit/: test_doctor.py  test_doctor_training.py  test_ffmpeg_utils.py  test_generate_cli.py  test_preprocess.py  test_train.py  test_train_cli.py  test_train_runner.py
