[project]
name = "train-audio-model"
version = "0.1.0"
description = "Local voice cloning pipeline: train RVC v2 on your voice, generate audio from text"
requires-python = "==3.10.*"
dependencies = [
    "edge-tts>=7.0,<8",
    "soundfile==0.12.1",
    "click>=8.1,<8.2",
    "typer==0.12.3",
    "python-dotenv==1.0.1",
    "rich==13.7.1",
    "numpy>=1.24,<2.0",
]

[project.optional-dependencies]
dev = [
    "pytest==8.2.0",
    "pytest-mock==3.14.0",
    "ruff==0.4.4",
]

[tool.ruff]
line-length = 100
target-version = "py310"
extend-exclude = ["rvc", "src/slicer2.py"]  # slicer2.py is vendored upstream

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "N", "SIM"]
ignore = [
    "E501",   # line length handled by formatter
    "UP007",  # Optional[X] required by typer 0.12.3 (no PEP 604 support)
    "B008",   # typer.Option() in defaults is the typer idiom
]

[tool.ruff.lint.per-file-ignores]
# sys.path fix-up must run before `from src.* import ...`
"src/generate.py" = ["E402"]
"src/preprocess.py" = ["E402"]
"src/doctor.py" = ["E402"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "network: tests that require internet access (deselect with '-m \"not network\"')",
    "gpu: tests that require a CUDA GPU (deselect with '-m \"not gpu\"')",
]
addopts = "-m 'not network and not gpu'"
